--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     //view model scope
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
 
+    //Gson library
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
